--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
   </head>
   <body>
     <div id="app"></div>
+    <footer>
+      <section class="container">
+          <p>Copyrights © 2023 Waqas Naeem Bajwa. All rights reserved.</p>
+      </section>
+  </footer>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
