About section is done

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
     <div id="app"></div>
     <footer>
       <section class="container">
+        <div class="row-flex">
           <p>Copyrights © 2023 Waqas Naeem Bajwa. All rights reserved.</p>
+          <p>Credit: <a href="https://www.freepik.com/">Images from Freepik</a></p>
+        </div>
+          
       </section>
   </footer>
     <script type="module" src="/src/main.js"></script>
