--- a/index.html
+++ b/index.html
@@ -15,8 +15,15 @@
     <footer>
       <section class="container">
         <div class="row-flex">
-          <p>Copyrights © 2023 Waqas Naeem Bajwa. All rights reserved.</p>
-          <p>Credit: <a href="https://www.freepik.com/">Images from Freepik</a></p>
+          <div>
+            <p>ReciPen - Your Recipe Book</p>
+            <p>Copyrights © 2023 Waqas Naeem Bajwa. All rights reserved.</p>
+          </div>
+          <div>
+            <p><a href="/privacy-policy">Privacy Policy</p>
+            <p>Credit: <a href="https://www.freepik.com/">Images from Freepik</a></p>
+          </div>
+
         </div>
           
       </section>
